Formatted code with spotless